2003-01-07  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* library version 4:0:0 frozen

2002-11-05  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* kvu_locks.h: removed dependency to asm/atomic.h
	* kvu_locks.h (add,sub,increment,decrement): removed
	
2002-10-16  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* NOTE: from now on, the library version 
	presents the public API version number, not 
	the ABI version.
	* removed interface version from library 
	base name
	* library version changed to 4:0:0

2002-06-29  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* kvu_fd_io.h: file added

2002-06-28  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* kvu_com_line.cpp (COMMAND_LINE): iterators
	functions to const members
	* kvu_com_line.cpp (COMMAND_LINE): added 
	constructor that takes 'void' as its argument

2002-04-29  Kai Vehmanen <kai.vehmanen@wakkanet.fi>
	
	* kvu_locks.h (KVU_GUARD_LOCK): class added
	
2002-04-28  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* all files renamed to have a 'kvu_' prefix
	* 'kvu_' prefix added to all free operators
	
2002-04-25  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* library version number added to library name; current
	  name is libkvutils3
	
2002-04-19  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* kvutils.h (kvu_sleep): added
	
2002-02-27  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* threads.h (all): added
	* locks.h (pthread_mutex_spinlock): moved to threads.h
	
2002-02-26  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* library version changed to 3:0:0 (change in 
	  binary-level API)
	* procedure_timer.h (last_duration_seconds): added
	
2001-12-22  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* kvutils.h (string_to_words): marked obsolete - not removed 
	from the library
	* kvutils.h (string_to_tokens): replaces string_to_words()
	* kvutils.h (string_to_tokens_quoted): added
	
2001-11-29  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* message_item.h (<<operator): added overloaded versions
	for handling (un)signed long long ints