@@ -1,3 +1,8 @@
+2003-02-13  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
+
+	* kvu_inttypes.h: file added
+	* library version changed to 5:0:1
+
 2003-01-07  Kai Vehmanen <kai.vehmanen@wakkanet.fi>
 
 	* library version 4:0:0 frozen
